<?xml version="1.0"?>
<package>
  <name>roswww</name>
  <version>0.1.12</version>
  <description>Feathery lightweight web server for ROS, that is based on <a href = "http://www.tornadoweb.org/en/stable">Tornado</a> web server module.</description>

  <maintainer email="iisaito@kinugarage.com">Isaac I.Y. Saito</maintainer>
  <author>Jonathan Mace</author>
  <author email="jihoonl@yujinrobot.com">Jihoon Lee</author>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/roswww</url>
  <url type="bugtracker">https://github.com/tork-a/roswww/issues</url>
  <url type="repository">https://github.com/tork-a/roswww</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>python-catkin-pkg</build_depend>
  <run_depend>rosbridge_server</run_depend>
  <run_depend>rosbridge_server</run_depend>
  <run_depend>rosgraph</run_depend>
  <run_depend>rospack</run_depend>
  <test_depend>phantomjs</test_depend>
  <test_depend>python-selenium-pip</test_depend>
  <test_depend>rostest</test_depend>
  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>
</package>
