<package format="3">
  <name>roswww</name>
  <version>0.1.13</version>
  <description>Feathery lightweight web server for ROS, that is based on <a href = "http://www.tornadoweb.org/en/stable">Tornado</a> web server module.</description>

  <maintainer email="iisaito@kinugarage.com">Isaac I.Y. Saito</maintainer>
  <author>Jonathan Mace</author>
  <author email="jihoonl@yujinrobot.com">Jihoon Lee</author>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/roswww</url>
  <url type="bugtracker">https://github.com/tork-a/roswww/issues</url>
  <url type="repository">https://github.com/tork-a/roswww</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend condition="$ROS_PYTHON_VERSION == 2">python-catkin-pkg</build_depend>
  <build_depend condition="$ROS_PYTHON_VERSION == 3">python3-catkin-pkg</build_depend>
  <exec_depend>rosbridge_server</exec_depend>
  <exec_depend>rosbridge_server</exec_depend>
  <exec_depend>rosgraph</exec_depend>
  <exec_depend>rospack</exec_depend>
  <test_depend condition="$ROS_PYTHON_VERSION == 2">python-selenium-pip</test_depend>
  <test_depend condition="$ROS_PYTHON_VERSION == 3">python3-selenium</test_depend>
  <test_depend>rostest</test_depend>
  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>
</package>
